--- a/frontend/src/styles/TimePicker.module.css
+++ b/frontend/src/styles/TimePicker.module.css
@@ -8,7 +8,7 @@
     padding: 10px;
     background-color: #000000;
     color: #c0c0c0;
-    border: 1px solid rgba(253, 224, 71, 0.9);
+    border: 2px solid rgba(147, 113, 3, 0.782); 
     border-radius: 4px;
     cursor: pointer;
     font-size: 16px;
@@ -20,7 +20,7 @@
     left: 0;
     width: 240px;
     background-color: #000000;
-    border: 1px solid rgba(253, 224, 71, 0.9);
+  border: 2px solid rgba(147, 113, 3, 0.782); 
     border-radius: 8px;
     padding: 16px;
     z-index: 1000;
@@ -65,9 +65,10 @@
   .confirmButton {
     width: 100%;
     padding: 10px;
-    background-color: rgba(253, 224, 71, 0.9);
-    color: #000000;
-    border: none;
+    background-color: transparent;
+    border: 2px solid rgba(147, 113, 3, 0.782); 
+    color: #c0c0c0;
+   
     border-radius: 4px;
     cursor: pointer;
     font-weight: bold;
