contact us background

--- a/frontend/src/styles/contactButton.module.css
+++ b/frontend/src/styles/contactButton.module.css
@@ -37,3 +37,11 @@
       width: 70%;
     }
   }
+  .copyIcon {
+    width: 1.25rem;
+    height: 1.25rem;
+    position: absolute;
+    right: '-30px';
+    top: '50%';
+    transform: 'translateY(-50%)';
+  }
