--- a/frontend/src/styles/contactButton.module.css
+++ b/frontend/src/styles/contactButton.module.css
@@ -1,3 +1,19 @@
+.contactButtonContainer {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 20px;
+    margin: 50px;
+    @media (max-width: 1280px) {
+        gap: 10px;
+    }
+    @media (max-width: 768px) {
+        
+        gap: 10px;
+    }
+}
 .responsiveButton {
     background-color: transparent;
     margin: 50px;
@@ -40,7 +56,7 @@
   .copyIcon {
     width: 1.25rem;
     height: 1.25rem;
-    position: absolute;
+  
     right: '-30px';
     top: '50%';
     transform: 'translateY(-50%)';
