--- a/frontend/src/styles/contactButton.module.css
+++ b/frontend/src/styles/contactButton.module.css
@@ -17,7 +17,7 @@
 .responsiveButton {
     background-color: transparent;
     margin: 50px;
-    border: 2px solid #B8860B;
+    border: 1px solid rgba(255,215,0,0.2);
     color: #c0c0c0;
     padding: 4px 8px;
     border-radius: 8px;
@@ -57,7 +57,16 @@
     width: 1.25rem;
     height: 1.25rem;
   
-    right: '-30px';
-    top: '50%';
+
     transform: 'translateY(-50%)';
+    @media (max-width: 1280px) {
+      margin-left: 20px;
+    }
+    @media (max-width: 768px) {
+        
+    margin-left: 20px;
+    }
+    @media (max-width: 480px) {
+        margin-left: 20px;
+    }
   }
