--- a/frontend/src/styles/ServiceSection.module.css
+++ b/frontend/src/styles/ServiceSection.module.css
@@ -35,8 +35,21 @@
   justify-content: space-between; /* Spread out child elements */
   box-sizing: border-box; /* Include padding in width/height */
   transition: margin 0.3s ease;
-  
+  opacity: 0;
+  transform: translateY(50px);
+  visibility: hidden;
+  transition: 
+    opacity 0.6s ease-out, 
+    transform 0.6s cubic-bezier(0.17, 0.84, 0.44, 1);
+  will-change: opacity, transform, visibility;
 }
+
+.serviceSection.animate {
+  opacity: 1;
+  transform: translateY(0);
+  visibility: visible;
+}
+
 .serviceButton {
   
   min-width: 150px; /* Minimum width */
@@ -233,7 +246,7 @@
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Subtle shadow */
     flex: 1 1 calc(33.333% - 1.5rem); /* Flexbox: Take up 1/3 of the row */
-    min-width: 250px; /* Ensure columns don’t shrink too much */
+    min-width: 250px; /* Ensure columns don't shrink too much */
     max-width: 100%; /* Prevent overflow */
     transition: transform 0.2s ease-in-out;
   }
