--- a/frontend/src/styles/facepage.module.css
+++ b/frontend/src/styles/facepage.module.css
@@ -112,3 +112,52 @@
       font-size: 1rem;
     }
   }
+
+  .contactUsHome{
+    background-color: #000;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 16px;
+    padding: 16px;
+
+  }
+  @media (max-width: 2700px) {
+    .contactUsHome{
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+  }
+
+  
+  @media (max-width: 1280px) {
+    .contactUsHome{
+      grid-template-columns: 1fr 1fr ;
+   
+    }
+   
+  }
+  @media (max-width: 1024px) {
+    .contactUsHome{
+      grid-template-columns: 1fr 1fr ;
+    
+    }
+   
+  }
+    @media (max-width: 768px) {
+      .contactUsHome{
+        grid-template-columns: 1fr 1fr;
+      
+  
+      }
+    
+  }
+
+  @media (max-width: 480px) {
+    .contactUsHome{
+      grid-template-columns: 1fr;
+      
+    }
+   
+  }
+ 
+
+  
