--- a/frontend/src/styles/facepage.module.css
+++ b/frontend/src/styles/facepage.module.css
@@ -153,7 +153,7 @@
 
   @media (max-width: 480px) {
     .contactUsHome{
-      grid-template-columns: 1fr;
+      grid-template-columns: 1fr 1fr;
       
     }
    
