--- a/frontend/src/styles/contactButton.module.css
+++ b/frontend/src/styles/contactButton.module.css
@@ -2,10 +2,10 @@
     position: relative;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: left;
     flex-direction: row;
     gap: 20px;
-    margin: 50px;
+    margin: 20px;
     @media (max-width: 1280px) {
         gap: 10px;
     }
@@ -13,10 +13,14 @@
         
         gap: 10px;
     }
+    @media (max-width: 480px) {
+        gap: 10px;
+        margin: 10px;
+    }
 }
 .responsiveButton {
     background-color: transparent;
-    margin: 50px;
+    margin: 20px;
     border: 1px solid rgba(255,215,0,0.2);
     color: #c0c0c0;
     padding: 4px 8px;
@@ -59,12 +63,22 @@
     }
   
     @media (max-width: 480px) {
-      margin: 5px;
-      font-size: 11px;
+      margin: 1px;
+      font-size: 14px;
       min-height: 50px;
-      width: 60%;
+      width: 90%;
+     
+
     }
   }
+  .responsiveButton:hover {
+   background-color: rgba(150, 139, 79, 0.605);
+    border: 2px solid rgba(255,215,0,0.2);
+    box-shadow: 0 0 10px rgba(255,215,0,0.2);
+    color: #c0c0c0;
+    font-weight: 600;
+  }
+
   .copyIcon {
     width: 1.25rem;
     height: 1.25rem;
@@ -79,7 +93,7 @@
     margin-left: 20px;
     }
     @media (max-width: 480px) {
-        margin-left: 40px;
+        margin-left: 20px;
         width: 0.9rem;
         height: 0.9rem;
        
