--- a/frontend/src/styles/facepage.module.css
+++ b/frontend/src/styles/facepage.module.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&display=swap');
 
 .logoContainer {
     display: flex;
@@ -89,13 +90,15 @@
     font-size: 3.5rem;
     color: #c3a602c3 !important;
     margin-bottom: 0.75rem;
-    text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.6);
+    text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.9);
+    font-family: 'Playfair Display', serif;
   }
   
   .carouselCaption p {
     font-size: 1.25rem;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
     margin-bottom: 4;
+    font-family: 'Playfair Display', serif;
   }
   
   @media (max-width: 768px) {
@@ -111,6 +114,19 @@
   
     .carouselCaption p {
       font-size: 1rem;
+    }
+  }
+  @media (max-width: 480px) {
+    .carouselCaption {
+      top: 50%;
+      width: 70%;
+      padding: 1rem;
+    }
+    .carouselCaption h1 {
+      font-size: 2.2rem;
+    }
+    .carouselCaption p {
+      font-size: 0.8rem;
     }
   }
 
@@ -164,4 +180,29 @@
   }
  
 
-  
+  .carouselButton {
+    background-color: rgba(189, 173, 46, 0.4);
+    border: 2px solid rgb(225, 185, 8);
+    border-radius: 5px;
+    padding: 15px 30px;
+    color: #f4e688;
+    font-family: 'Playfair Display', serif;
+    font-weight: 600;
+    font-size: 18px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+  }
+
+  .carouselButtonHover {
+    background-color: rgb(188, 169, 3);
+    color: #ffffff;
+    font-family: 'Playfair Display', serif;
+    font-weight: 800;
+    border: 3px solid rgb(225, 185, 8);
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+    font-weight: 600;
+  }
+  .carouselButton:hover {
+    transform: scale(1.05); /* Slight enlarge on hover */
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15); /* Increase shadow on hover */
+  }
