--- a/frontend/src/styles/facepage.module.css
+++ b/frontend/src/styles/facepage.module.css
@@ -213,3 +213,22 @@
     border-radius: 8px;
     backdrop-filter: blur(2px); /* Optional: adds a slight blur effect */
   }
+
+  .carousel :global(.carousel-item) {
+    transition: transform 0.6s ease-in-out;
+  }
+
+  .carousel :global(.carousel-item-next:not(.carousel-item-start)),
+  .carousel :global(.active.carousel-item-end) {
+    transform: translateX(100%);
+  }
+
+  .carousel :global(.carousel-item-prev:not(.carousel-item-end)),
+  .carousel :global(.active.carousel-item-start) {
+    transform: translateX(-100%);
+  }
+
+  .carousel :global(.carousel-item-next.carousel-item-start),
+  .carousel :global(.carousel-item-prev.carousel-item-end) {
+    transform: translateX(0);
+  }
