optimized thankyou page

--- a/frontend/src/styles/Thankyou.module.css
+++ b/frontend/src/styles/Thankyou.module.css
@@ -6,6 +6,10 @@
     color: #fff; /* Adjust for contrast */
     height: 100vh; /* Full screen height */
     width: 100%; /* Full screen width */
+    background-image: url('/hand3.webp');
+    background-size: cover;
+    background-position: left;
+    background-repeat: no-repeat;
   }
   
   .content {
